--- a/Program/Program.csproj
+++ b/Program/Program.csproj
@@ -41,10 +41,10 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="HuffmanСoding.cs" />
+        <Compile Include="Huffman.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
-        <Compile Include="ShannonFanoCoding.cs" />
+        <Compile Include="ShannonFano.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
